2005-05-02  Derek Price  <derek@ximbiot.com>

	Remove unnecessary level of indirection.
	* lock.c (L_HISTORY_LOCK, L_VAL_TAGS_LOCK): Remove macros.
	(internal_lock, internal_clear_lock): Accept lock as argument.
	(history_lock, clear_history_lock, val_tags_lock, clear_val_tags_lock):
	Replace old macro arg with an actual lock pointer.

2005-05-02  Derek Price  <derek@ximbiot.com>

	* lock.c (internal_lock, internal_clear_lock): Add protos.
	(history_lock, val_tags_lock): Return the chartered true/false status.

2005-05-02  Derek Price  <derek@ximbiot.com>

	* cvs.h (CVSHISTLCK): Rename macro to...
	(CVSHISTORYLCK): ...this.
	(CVSVALTAGSLCK): New macro.
	(val_tags_lock, clear_val_tags_lock): New functions.
	* lock.c (global_val_tags_lock): New global.
	(Lock_Cleanup): Clean up after val-tags lock if necessary.
	(L_HISTORY_LOCK, L_VAL_TAGS_LOCK): New local macros.
	(internal_lock, val_tags_lock, clear_val_tags_lock): New functions.
	(history_lock): Use new internal function.
	* tag.c (is_in_val_tags, add_to_val_tags): New functions using the
	write lock for val-tags and factored from...
	(tag_check_valid): ...this function.
	* sanity.sh (lockfiles-22): Add val-tags lock test.

2005-04-30  Mark D. Baushke  <mdb@cvshome.org>

	* lock.c (global_readlock, global_writelock, global_history_lock):
	Add missing alternatives for non-LOCK_COMPATIBILITY initialization.

2005-04-28  Derek Price  <derek@ximbiot.com>

	* cvs.h (history_lock, clear_history_lock): New protos.
	* lock.c (struct lock): Add lockdirname.
	(global_history_lock): New global.
	(global_read_lock): Initialize.
	(lock_name): Handle const args.
	(lock_simple_remove): Factor out code in favor of clear_lock call.
	(set_lock): Handle variable lockdirname.
	(lock_filesdoneproc): Set new lockdirname.
	(history_lock, clear_history_lock): New functions.
	(clear_lock): Avoid segfault on missing lock.
	(Lock_Cleanup): Clean up history locks when necessary.
	* history.c (history_write): Use new lock.